kubernetes/apps/tuppr/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: talos-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kubernetes-upgrade
  namespace: talos-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes
      app.kubernetes.io/name: kubernetes-upgrade
      app.kubernetes.io/part-of: tuppr
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kubernetes-upgrade
  namespace: talos-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes
      app.kubernetes.io/name: kubernetes-upgrade
      app.kubernetes.io/part-of: tuppr
  egress:
    - toEntities:
      - host
      - kube-apiserver
      - remote-node
      - world # This is really kube-VIP
      toPorts:
      - ports:
        - port: "6443"
          protocol: TCP
        - port: "50000"
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: talos-upgrade
  namespace: talos-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: talos-upgrade
      app.kubernetes.io/part-of: tuppr
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: talos-upgrade
  namespace: talos-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: talos-upgrade
      app.kubernetes.io/part-of: tuppr
  egress:
    - toEntities:
      - host
      - kube-apiserver
      - remote-node
      - world # This is really kube-VIP
      toPorts:
      - ports:
        - port: "6443"
          protocol: TCP
        - port: "50000"
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tuppr
  namespace: talos-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: talos-system-tuppr
      app.kubernetes.io/name: tuppr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - port: 8081
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gotify
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: gotify
              app.kubernetes.io/instance: gotify-gotify
              app.kubernetes.io/name: gotify-gotify
      ports:
        - port: 80
          protocol: TCP
    - to: # To check with upstream image-factory
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - "${HAPROXY_WHITELIST}"
      ports:
        - port: 443
          protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tuppr
  namespace: talos-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: talos-system-tuppr
      app.kubernetes.io/name: tuppr
  egress:
    - toEntities:
      - host
      - kube-apiserver
      - remote-node
      toPorts:
      - ports:
        - port: "6443"
          protocol: TCP
        - port: "50000"
          protocol: TCP
  ingress:
    - fromEntities:
      - kube-apiserver
      - remote-node
      - host
